# RobotChallenge

./: README.md  WifiSetup.sh
ArduinoMotorController/: ArduinoMotorController.ino
Arduinopassthrough/: Arduinopassthrough.ino
RBpi5/: CMakeLists.txt  Doxyfile  Makefile  config.txt  mainpage.dox  requirements.txt
RBpi5/html/: _brain_8h.html  _brain_8h.js  _brain_8h__dep__incl.dot  _brain_8h__incl.dot  _brain_8h_source.html  _cam_controller_8cpp.html  _cam_controller_8cpp__incl.dot  _cam_controller_8h.html  _cam_controller_8h.js  _cam_controller_8h__dep__incl.dot  _cam_controller_8h__incl.dot  _cam_controller_8h_source.html  _config_8cpp.html  _config_8cpp.js  _config_8cpp__incl.dot  _config_8cpp_a2c75664fc017c5c84a3a64d781b880bc_icgraph.dot  _config_8cpp_a700fe77984eb47e52873a73de7d9a23a_cgraph.dot  _config_8cpp_a700fe77984eb47e52873a73de7d9a23a_icgraph.dot  _config_8cpp_a8c7f671a4eaae43db4839df0abcb514a_icgraph.dot  _config_8h.html  _config_8h.js  _config_8h__dep__incl.dot  _config_8h__incl.dot  _config_8h_source.html  _lidar_controller_8cpp.html  _lidar_controller_8cpp.js  _lidar_controller_8cpp__incl.dot  _lidar_controller_8h.html  _lidar_controller_8h.js  _lidar_controller_8h__dep__incl.dot  _lidar_controller_8h__incl.dot  _lidar_controller_8h_source.html  _map_controller_8cpp.html  _map_controller_8cpp__incl.dot  _map_controller_8h.html  _map_controller_8h.js  _map_controller_8h__dep__incl.dot  _map_controller_8h__incl.dot  _map_controller_8h_source.html  _motor_controller_8cpp.html  (+182 more)
RBpi5/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+66 more)
RBpi5/setup/: main.cpp
RBpi5/src/: Brain.h  CamController.cpp  CamController.h  Config.cpp  Config.h  LidarController.cpp  LidarController.h  MapController.cpp  MapController.h  MotorControl.cpp  MotorControl.h  MotorController.cpp  MotorController.h  main.cpp
